--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "express-rate-limit": "^6.11.0",
     "mongodb": "^6.0.0",
     "mongoose": "^7.5.0",
+    "morgan": "^1.10.0",
     "slugify": "^1.6.6"
   },
-  "engines":{
-    "node":"18.16.0"
-
+  "engines": {
+    "node": "18.16.0"
   }
 }
